# harbor

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
assets/css/: ua.css
assets/html/: css001.html  css002.html  custom001.html  custom002.html  custom003.html  custom004.html
docs/: colors.md
docs/devlogs/: template.md
docs/devlogs/002/: 2.md
docs/devlogs/003/: 3.md
docs/devlogs/004/: 4.md
docs/devlogs/006/: 6.md
docs/devlogs/007/: 7.md  README.md
docs/devlogs/008/: 8.md
docs/devlogs/010/: 10.md
docs/devlogs/011/: 11.md  README.md
docs/devlogs/012/: 12.md
harbor/: Cargo.toml
harbor/src/: client.rs  globals.rs  http_client.rs  infra.rs  lib.rs  main.rs  shader.wgsl
harbor/src/css/: colors.rs  cssom.rs  layout.rs  mod.rs  models.rs  parser.rs  properties.rs  selectors.rs  tokenize.rs  values.rs
harbor/src/css/box/: mod.rs
harbor/src/font/: mod.rs  ttc.rs  ttf.rs
harbor/src/font/subtables/: cmap.rs
harbor/src/font/tables/: cmap.rs  gasp.rs  glyf.rs  hdmx.rs  head.rs  hhea.rs  hmtx.rs  loca.rs  maxp.rs  meta.rs  mod.rs  name.rs  os2.rs  post.rs
harbor/src/font/ttf/: mod.rs  ttc.rs  ttf.rs
harbor/src/html5/: dom.rs  mod.rs  parse.rs  tokenize.rs
harbor/src/html5/parse/: afe.rs  mod.rs  open_elems.rs  stream.rs  tokenize.rs  tree.rs
harbor/src/http/: client.rs  dns.rs  mod.rs  url.rs
harbor/src/render/: mod.rs  shapes.rs  state.rs  text.rs
harbor/tests/: common.rs  specificity.rs  tree_test.rs
res/css/: ua.css
res/fonts/: Arial.ttc  CourierPrime.ttc  Georgia.ttc  TrebuchetMS.ttc  Verdana.ttc
src/: main.rs
(+23 files in other folders)
