[package]
name = "harbor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "Harbor"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.30.12"
tracy-client = { version = "0.17", features = ["enable"] }
rustls = "0.23.35"
webpki-roots = "1.0.4"
encoding_rs = "0.8.35"
idna = "1.1.0"

[features]
transparent = []
